--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -60,14 +60,14 @@
         "settings": {
           "align_logo": "left",
           "logo": "shopify:\/\/shop_images\/logo.png",
-          "logo_max_width": "125",
+          "logo_max_width": "330",
           "main_linklist": "updated-menu",
           "shop_sublist1": "",
           "shop_sublist2": "",
           "featured_product": "",
           "message": true,
           "home_page_only": false,
-          "message_text": "Buy Now, Pay Later with Affirm. Free Ground Shipping & Returns in the U.S. and Canada.",
+          "message_text": "Buy Now, Pay Later with Affirm. Free Ground Shipping & Returns in the U.S.",
           "message_link": "shopify:\/\/collections\/new-arrivals",
           "color_bg": "#000000",
           "color_text": "#ffffff"
@@ -134,15 +134,16 @@
       "1502750296449": {
         "type": "hero",
         "settings": {
-          "image": "shopify:\/\/shop_images\/header.jpg",
+          "image": "shopify:\/\/shop_images\/Screen_Shot_2020-09-20_at_11.23.08_AM.png",
+          "video": "https:\/\/player.vimeo.com\/video\/136920991?autoplay=1&loop=1\" style=\"position:absolute;top:0;left:0;width:100%;height:100%;\" frameborder=\"0\" allow=\"autoplay; fullscreen\" allowfullscreen",
           "alignment": "center",
           "text_alignment": "text-left",
           "text_alignment_vertical": "text-bottom",
           "text_weight": "700",
-          "title": "New Arrivals",
+          "title": "40% Off Sale",
           "hero_size": "x-small",
           "button_label": "Shop Now",
-          "button_link": "shopify:\/\/collections\/new-arrivals"
+          "button_link": "shopify:\/\/collections\/sale"
         }
       },
       "1502750397730": {
@@ -215,7 +216,7 @@
         "type": "collection-template",
         "settings": {
           "layout": "grid",
-          "grid": "2",
+          "grid": "3",
           "rows": "30",
           "show_collection_image": false,
           "title": "Fall \/ Winter 2017",
@@ -1113,6 +1114,7 @@
       },
       "1578074573489": {
         "type": "custom-content",
+        "disabled": true,
         "blocks": {
           "1578074573489-1": {
             "type": "image",
@@ -1142,14 +1144,14 @@
       "1591374010288": {
         "type": "sk-two-img",
         "settings": {
-          "first-img": "shopify:\/\/shop_images\/HeaderMask.jpg",
-          "second-img": "shopify:\/\/shop_images\/Homepage-ShopbyFaceShape.jpg",
-          "first-text": "Fashion Face Mask",
-          "second-text": "Shop by Face Shape",
+          "first-img": "shopify:\/\/shop_images\/exclsuives.png",
+          "second-img": "shopify:\/\/shop_images\/facemask.png",
+          "first-text": "Online Exclusives",
+          "second-text": "Face Masks",
           "first-link-text": "SHOP NOW",
           "second-link-text": "SHOP NOW",
-          "first-link-url": "shopify:\/\/collections\/face-masks",
-          "second-link-url": "https:\/\/eugeniakim.com\/pages\/face-shape"
+          "first-link-url": "shopify:\/\/collections\/exclusives",
+          "second-link-url": "shopify:\/\/collections\/face-masks"
         }
       },
       "1591380270439": {
